--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 Hello there, awesome person!
 <html>
   <body>
-    Hello there, awesome person! 
+        <title>My awesome web page</title>
+    </head>
   </body>
 </html>
