--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 Hello there, awesome person!
 <html>
-  <body>
-        <title>My awesome web page</title>
+    <head>
+        <title>I am a title!</title>
     </head>
-  </body>
+
+    <body>
+        Some content.
+    </body>
 </html>
