--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 
 <html>
     <head>
+        <title>My awesome web page</title>
+    </head>
+<head>
         <title>I am a title!</title>
     </head>
 
