--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>I am a title!</title>
     </head>
 
-    <body>
+    <body><h1> some content for the header</h1>
         Some content.
     </body>
 </html>
