--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
 
     <body><h1> some content for the header</h1>
+        <img src="https://avatars.githubusercontent.com/u/64354997?v=4">
         Some content.
     </body>
 </html>
