--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 
     <body><h1> some content for the header</h1>
         <img src="https://avatars.githubusercontent.com/u/64354997?v=4">
+        <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
+<ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
         Some content.
     </body>
 </html>
