--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <li>This</li>
     <li>Is an</li>
     <li>Ordered list</li>
+            <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 </ol>
 <ul>
     <li>This</li>
