--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <title>My awesome web page</title>
     </head>
-<head>
+    <head>
         <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body><h1> some content for the header</h1>
